# NCM-Playlist-Downloader

./: .gitignore  MANIFEST.in  README.md  requirements.txt  run.bat  run.sh  script.py  setup.cfg
ncm_playlist_downloader/: __init__.py  cli.py
