[metadata]
name = ncm-playlist-downloader
version = 0.1.0
description = 网易云歌单下载器
long_description = file: README.md
long_description_content_type = text/markdown
author = padoru233 & SteveZMTstudios
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
py_modules = script
install_requires =
    qrcode
    pyperclip
    pyncm
    requests
    colorama
    mutagen
    Pillow
    selenium
    plyer
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    ncmdl = ncm_playlist_downloader.cli:main
